--- a/client/css/multiselectfield.css
+++ b/client/css/multiselectfield.css
@@ -1,22 +1,122 @@
-.multiselectfield-cols {
-  display: flex;
+select.multiselectfield {
+  display: none;
+}
+
+.multiselectfield-field {
   background: #fff;
-  padding: 4px;
   border: 1px solid #ced5e1;
   border-radius: 0.23em;
-  margin-top: 40px;
+  /* padding: 8px 4px 0 4px; */
+}
+
+/* Header */
+/* ============================================ */
+
+.multiselectfield-header {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ced5e1;
+  background-color: #f1f3f6;
+  padding: 8px;
+  gap: 8px;
+}
+
+.multiselectfield-search {
+  width: 50%;
+  position: relative;
+}
+
+.multiselectfield-search-input {
+  width: 100%;
+  border: 1px solid #ced5e1;
+  padding: 3px 6px;
+  height: 34px;
+  outline: 0;
+  box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+  border-radius: 0.23rem;
+  color: #566b8d;
+}
+
+.multiselectfield-search-input:focus {
+  border-color: #66afe9;
+}
+
+.multiselectfield-search-input::placeholder {
+  opacity: 0.6;
+}
+
+.multiselectfield-search-icon {
+  position: absolute;
+  top: 4px;
+  right: 10px;
+  font-size: 20px;
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.multiselectfield-search-icon.is-hidden {
+  display: none;
+}
+
+.multiselectfield-search-clear {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 34px;
+  height: 34px;
+  border: 0;
+  background: 0;
+  display: none;
+}
+
+.multiselectfield-search-clear.is-visible {
+  display: block;
+}
+
+.multiselectfield-search-clear-icon {
+  width: 20px;
+  height: 20px;
+  font-size: 14px;
+  line-height: 24px;
+  border-radius: 100%;
+  background: #aaa;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.multiselectfield-search-clear-icon:focus,
+.multiselectfield-search-clear-icon:hover {
+  background: #444;
+}
+
+.multiselectfield-count {
+  width: 50%;
+  display: flex;
+  justify-content: end;
+}
+
+/* Lists */
+/* ============================================ */
+
+.multiselectfield-lists {
+  display: flex;
+  padding: 0 4px;
 }
 
 .multiselectfield-list {
   width: 50%;
   list-style: none;
   margin: 0;
-  max-heigth: 500px;
+  max-height: 300px;
   overflow: auto;
-  padding: 4px;
+  padding: 8px 4px;
   display: flex;
   flex-direction: column;
   gap: 3px;
+  position: relative;
 }
 
 .multiselectfield-item {
@@ -24,6 +124,10 @@
   background: #fafbfc;
   display: flex;
   transition: background-color 400ms;
+}
+
+.multiselectfield-item.is-hidden {
+  display: none;
 }
 
 .multiselectfield-item.sortable-ghost {
@@ -41,10 +145,20 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   cursor: default;
+  position: relative;
+}
+
+.multiselectfield-item-title-dragger {
+  font-size: 16px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  opacity: 0.6;
 }
 
 .multiselectfield-item-title-sortable {
   cursor: move;
+  padding-left: 27px;
 }
 
 .multiselectfield-item-action {
@@ -58,4 +172,32 @@
   align-items: center;
   font-size: 20px !important;
   color: #43536d;
+}
+
+.multiselectfield-item-action-add:focus,
+.multiselectfield-item-action-add:hover {
+  background-color: #368b39;
+  color: white;
+}
+
+.multiselectfield-item-action-remove:focus,
+.multiselectfield-item-action-remove:hover {
+  background-color: #da273b;
+  color: white;
+}
+
+/* Footer */
+/* ============================================ */
+
+.multiselectfield-footer {
+  display: flex;
+  padding: 8px;
+  border-top: 1px solid #ced5e1;
+  background-color: #f1f3f6;
+  gap: 8px;
+}
+
+.multiselectfield-action {
+  width: 50%;
+  margin: 0;
 }
