--- a/client/css/multiselectfield.css
+++ b/client/css/multiselectfield.css
@@ -172,6 +172,7 @@ select.multiselectfield {
   align-items: center;
   font-size: 20px !important;
   color: #43536d;
+  flex: none;
 }
 
 .multiselectfield-item-action-add:focus,
