--- a/client/css/multiselectfield.css
+++ b/client/css/multiselectfield.css
@@ -9,6 +9,18 @@ select.multiselectfield {
   border-radius: 0.23em;
 }
 
+.multiselectfield-field .sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip-path: inset(50%);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 /* Header */
 /* ============================================ */
 
